# DiveLog

./: .gitignore  AddDiveApp.py  AddGearApp.py  CHANGELOG.md  DiveFilterer.py  MainApp.py  README.md  pyproject.toml  streamlit_app.py
.claude/: claude.md  existing-code.md  next-steps.md
Utilities/: APIKeyDetector.py  AddDive.py  AddGear.py  DiveFilterer.py  FilterFunctions.py  StatisticsAgent.py  StatisticsFunctions.py
Utilities/ClassUtils/: DiveClass.py  GearClasses.py
Utilities/Parsers/: GarminDiveParser.py
Utilities/Schemas/: AgentModels.py  ChartSchemas.py  ToolInputs.py  ToolOutputs.py  __init__.py
Utilities/Tools/: ChartState.py  ChartTools.py  FilterTool.py  SearchTool.py  StatisticsTool.py  ToolState.py  __init__.py
