[project]
name = "divelog"
version = "0.2.0"
description = "Dive log management with AI-powered statistics analysis"
authors = [
    {name = "vstipetic", email = "vedran.stipetic@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "fitparse>=1.2.0",
    "attrs>=25.1.0,<26.0.0",
    # Pydantic for schema validation
    "pydantic>=2.0.0,<3.0.0",
    # LangChain and LLM providers
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-anthropic>=0.3.0,<0.4.0",
    # Streamlit for UI
    "streamlit>=1.40.0,<2.0.0",
    # Legacy - keeping for backward compatibility with existing code
    "google-generativeai>=0.8.4,<0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
]
visualization = [
    "matplotlib",
    "plotly",
]
